2006-07-09  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Tim O.

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface):
        Initialize wkPathFromFont.

2006-07-09  Darin Adler  <darin@apple.com>

        - fix release build

        * Plugins/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView restorePortState:]): Cast inside the assertion so
        that we don't have an unused variable in versions with assertions disabled.
        The alternative would be to wrap the whole thing in an #if statement.

2006-07-08  Tim Omernick  <timo@apple.com>

        Reviewed by John Sullivan.

        * Plugins/WebBaseNetscapePluginView.h:
        - Added ivars for OpenGL support.  Someday it would be nice to refactor this class so
          that each drawing model is encapsulated in a class; this would allow
          WebBaseNetscapePluginView to make more efficient use of space, for example by not
          keeping OpenGL-related ivars for Quickdraw plug-ins.
        
        * Plugins/WebBaseNetscapePluginView.m:
        - Declared a bunch of internal methods for OpenGL support (see below).
        - Removed "forUpdate" from CoreGraphics port state struct; it was always set to "YES",
          so I just cleaned up the silly code that used it.
        - Declared OpenGL port state struct.
        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
        - Moved a CoreGraphics-related assertion down to the big "switch" statement.
        - Don't set window.type here -- according to the Netscape Plug-in API docs, the plug-in
          should default to "windowed" mode, and may call NPN_SetValue() during its NPN_New() to
          request that the browser use a "windowless" (offscreen) context instead.
        - Moved the assertion from the top of this method here; removed a less restrictive
          assertion that is now obsolete.
        - Removed "forUpdate" flag from CoreGraphics port state struct.