@@ -77,12 +77,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             <span class="label">Namespace URI:</span>
             <span class="value"><div id="nodeNamespace"></div></span>
         </div>
-        <div id="nodeXpath">
-            <div class="infoRow header">
-                <span class="label" style="width: initial">Xpath</span>
-            </div>
-            <div id="nodeXpathValue"></div>
-        </div>
         <div id="elementAttributes">
             <div class="infoRow header">
                 <span class="label" style="width: initial">Element Attributes</span>
